# CORI_dev

./: .gitignore  100_Feature_overlap.ipynb  101_CORI_analysis.ipynb  102_CORI_figures.ipynb  103_CORI_additional_analyses.ipynb  104_fourWay_mediation.R  105_disentangle_AutoEncoder.py  CORI_analysis.ipynb  ORIGINAL_TO_NEW_MAP.md  README.md  REFACTOR_NOTES.md  disentangle.py  disentangle.py.py  logs.md  logs_100epoch.txt  plan.md  pyproject.toml  requirements.txt
CORI_analysis_clean/: README.md  SHA256SUMS.txt  VALIDATION.md
CORI_analysis_clean/notebooks/: 101_main_clean.ipynb
CORI_analysis_clean/scripts/: run_mediation.py  run_proteomics.py
CORI_analysis_clean/src/: clinical_covariates.py  cori_pipeline_utils_v13.py  handcrafted_features.py  rank_transition_plot.py  treatment_analysis.py  utils.py
CORI_analysis_clean/tests/: test_logic_parity.py
CORI_code_clean/: 101_main.ipynb  102_mediation.py  102_mediation_cancerStatus_adjusted.py  103_proteomics.ipynb  README.md
CORI_code_clean/archive/: 00000_baseline_training.py  00000_cmr_retinal.py  00000_patch_add_handcrafted_mcorimmace_features_v2.py  101_main.ipynb
CORI_code_clean/src/: clinical_covariates.py  cmr_helper.py  cori_pipeline_utils_v13.py  handcrafted_features.py  performance.py  (+3 more)
archive/: CORI_analysis_backup1.ipynb
docs/: EXPERIMENT_MAP.md  VALIDATION_REPORT.md
src/: __init__.py  cmr.py  data.py  matching.py  metrics.py  models.py  plots.py  specificity.py
src2/: helper_univariate.py  nri.py  plot.py  residualiser.py  train.py
tests/: logic_hashes.json  test_config.py  test_core.py
(+33 files in other folders)
